[package]
authors = ["Let Eyes Equals Two"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "lazy_vulkan"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { features = ["linked"], version = "0.38.0" }
ash-window = "0.13.0"
bytemuck = "1.13.0"
glam = "0.22.0"
log = "0.4.17"
offset-allocator = "0.2.0"
png = "0.17.16"
thunderdome = "0.6.0"
uds_windows = "1.0.2"
winit = { version = "0.30.11", default-features = false, features = [
    "rwh_06",
    "wayland",
] }

[dev-dependencies]
env_logger = "0.10.0"
